# regenerationism

./: .gitignore  Dockerfile  fly.toml  ufe_client.py  ufe_demo.py  ufe_hook.py  ufe_integration.py  vercel.json
.claude/: settings.local.json
docs/: NIV_Final_OOS_Report.md  NIV_Next_Gen_OOS_Framework.md  NIV_Out_of_Sample_Methodology_and_Results.md
regenerationism.ai/: README.md
regenerationism.ai/analysis/: niv_analysis.py  requirements.txt
regenerationism.ai/desktop/: README.md  package.json
regenerationism.ai/desktop/src/: app.js  index.html  main.js  preload.js
regenerationism.ai/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
regenerationism.ai/frontend/app/: globals.css  layout.tsx  page.tsx
regenerationism.ai/frontend/app/api-docs/: page.tsx
regenerationism.ai/frontend/components/: ApiSettings.tsx  AuditLogButton.tsx  AuditLogViewer.tsx  CrashCam.tsx  DemoBanner.tsx  Footer.tsx  MonteCarloRunner.tsx  Navigation.tsx  ParameterPanel.tsx  RecessionGauge.tsx  RedAlertBanner.tsx  ScenarioLibrary.tsx  SensitivityChart.tsx
regenerationism.ai/frontend/lib/: auditLog.ts  fredApi.ts  oosTests.ts  thirdOrderAccounting.ts
regenerationism.ai/frontend/public/: NIV_Out_of_Sample_Methodology_and_Results.md
regenerationism.ai/frontend/store/: sessionStore.ts
regenerationism.ai/rust-engine/: Cargo.toml
regenerationism.ai/rust-engine/src/: fred.rs  main.rs  niv.rs
regenerationism.ai/sdk/: README.md  package.json  tsconfig.json
regenerationism.ai/sdk/src/: index.ts
src/: main.rs  niv.rs
(+15 files in other folders)
