[package]
name = "niv-engine"
version = "1.0.0"
edition = "2021"
authors = ["Diren Akkocdemir <diren@regenerationism.ai>"]
description = "NIV (National Impact Velocity) Calculation Engine - Macro Crisis Detection"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for FRED
reqwest = { version = "0.11", features = ["json"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Math
statrs = "0.16"

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Caching
moka = { version = "0.12", features = ["future"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
